--- a/parts/footer.html
+++ b/parts/footer.html
@@ -1,3 +1,25 @@
-<!-- wp:site-logo /-->
+<!-- wp:columns -->
+<div class="wp-block-columns"><!-- wp:column -->
+<div class="wp-block-column"><!-- wp:site-logo /-->
 
-<!-- wp:site-title /-->
+<!-- wp:paragraph -->
+<p><a href="http://localhost:8883/privacy-policy/" data-type="page" data-id="3">Privacy Policy</a></p>
+<!-- /wp:paragraph -->
+
+<!-- wp:paragraph -->
+<p><a href="http://localhost:8883/156-2/" data-type="page" data-id="156">Termini e Condizioni</a></p>
+<!-- /wp:paragraph --></div>
+<!-- /wp:column -->
+
+<!-- wp:column {"verticalAlignment":"stretch"} -->
+<div class="wp-block-column is-vertically-aligned-stretch"><!-- wp:social-links {"size":"has-normal-icon-size","align":"right"} -->
+<ul class="wp-block-social-links alignright has-normal-icon-size"><!-- wp:social-link {"url":"http://localhost:8883/wp-admin/site-editor.php?p=%2Fwp_template%2Ftema-esame%2F%2Fwp-custom-template-pagina-prodotto\u0026canvas=edit","service":"instagram"} /-->
+
+<!-- wp:social-link {"url":"http://localhost:8883/wp-admin/site-editor.php?p=%2Fwp_template%2Ftema-esame%2F%2Fwp-custom-template-pagina-prodotto\u0026canvas=edit","service":"tiktok"} /--></ul>
+<!-- /wp:social-links --></div>
+<!-- /wp:column --></div>
+<!-- /wp:columns -->
+
+<!-- wp:paragraph {"align":"left","fontSize":"small"} -->
+<p class="has-text-align-left has-small-font-size">OSMOZY S.R.L. (Progetto Didattico) C.F./P.iva 01234567890 · REA di Milano 987654 SEDE LEGALE E OPERATIVA: Via delle Storie, 10 ∙ 20121 Milano (MI) 2025 © Osmozy - Tutti i diritti riservati.</p>
+<!-- /wp:paragraph -->
