--- a/parts/header.html
+++ b/parts/header.html
@@ -1,3 +1,17 @@
-<!-- wp:paragraph -->
-<p>Sono l'header</p>
-<!-- /wp:paragraph -->
+<!-- wp:columns -->
+<div class="wp-block-columns"><!-- wp:column -->
+<div class="wp-block-column"><!-- wp:site-logo {"width":173} /--></div>
+<!-- /wp:column -->
+
+<!-- wp:column {"verticalAlignment":"center"} -->
+<div class="wp-block-column is-vertically-aligned-center"><!-- wp:quote {"style":{"typography":{"fontStyle":"italic","fontWeight":"600"}}} -->
+<blockquote class="wp-block-quote" style="font-style:italic;font-weight:600"><!-- wp:paragraph {"align":"center","style":{"elements":{"link":{"color":{"text":"var:preset|color|viola"}}}},"textColor":"viola","fontSize":"large"} -->
+<p class="has-text-align-center has-viola-color has-text-color has-link-color has-large-font-size">"Regala memorie"</p>
+<!-- /wp:paragraph --></blockquote>
+<!-- /wp:quote --></div>
+<!-- /wp:column -->
+
+<!-- wp:column -->
+<div class="wp-block-column"><!-- wp:navigation {"style":{"spacing":{"blockGap":"var:preset|spacing|60"}},"layout":{"type":"flex","justifyContent":"right"}} /--></div>
+<!-- /wp:column --></div>
+<!-- /wp:columns -->
