--- a/parts/footer.html
+++ b/parts/footer.html
@@ -13,9 +13,9 @@
 
 <!-- wp:column {"verticalAlignment":"stretch"} -->
 <div class="wp-block-column is-vertically-aligned-stretch"><!-- wp:social-links {"size":"has-normal-icon-size","align":"right"} -->
-<ul class="wp-block-social-links alignright has-normal-icon-size"><!-- wp:social-link {"url":"http://localhost:8883/wp-admin/site-editor.php?p=%2Fwp_template%2Ftema-esame%2F%2Fwp-custom-template-pagina-prodotto\u0026canvas=edit","service":"instagram"} /-->
+<ul class="wp-block-social-links alignright has-normal-icon-size"><!-- wp:social-link {"url":"http://localhost:8883/pagina-prodotto/","service":"instagram"} /-->
 
-<!-- wp:social-link {"url":"http://localhost:8883/wp-admin/site-editor.php?p=%2Fwp_template%2Ftema-esame%2F%2Fwp-custom-template-pagina-prodotto\u0026canvas=edit","service":"tiktok"} /--></ul>
+<!-- wp:social-link {"url":"http://localhost:8883/pagina-prodotto/","service":"tiktok"} /--></ul>
 <!-- /wp:social-links --></div>
 <!-- /wp:column --></div>
 <!-- /wp:columns -->
